update basic order & product
